# cdsloc

./: .env.example  .gitignore  ARQUIMSG.BAS  ARQUIMSG.MSG  BD_CDLOC.mdb  BD_CDLOC_Desenv.mdb  CAD_DEP.FRM  CAD_DEP.FRX  CD-LOC  CDS.FRM  CDS.FRX  CLIENTE.FRX  CONSREC1.FRM  CONSRES1.FRM  CONSRES2.FRM  CONSRES2.FRX  CONSRES3.FRM  CONSRES3.FRX  CONSTANT.TXT  CORRECOES_FORMULARIO_CLIENTES.md  CORRECOES_FRONTEND_API.md  DEBUG_FRONTEND_CLIENTES.md  DECLARA.BAS  DIAGRAMA_RELACOES.md  Instalação Sistema com Banco de Dados.SWT  Intalação Sistema CD's Loc.SWT  LOCDEVOL.FRM  LOCDEVOL.FRX  MENU.FRM  MENU02.FRM  MENU02.FRX  Menu.DEP  Menu.PDM  Menu.vbp  Menu.vbw  PAINEL.FRM  PAINEL.FRX  PROGRESSO.md  README.md  REL_CLID.FRM  (+50 more)
.reversa/: config.toml  hooks.yml  plan.md  setup.json  state.json
.reversa/_config/: files-manifest.json  manifest.yaml
.reversa/context/: modules.json  surface.json
.reversa/templates/: requirements-template.md  roadmap-template.md
_reversa_sdd/: architecture.md  c4-components.md  c4-containers.md  c4-context.md  code-analysis.md  confidence-report.md  data-dictionary.md  dependencies.md  domain.md  erd-complete.md  gaps.md  inventory.md  permissions.md  questions.md  reconstruction-plan.md  state-machines.md
_reversa_sdd/adrs/: 001-architecture-vb6-desktop.md  README.md
_reversa_sdd/cadastro-cds/: design.md  requirements.md  tasks.md
app/: __init__.py  api.py  main.py
backup_bd/: bkp_20260512.sql
docker/: Dockerfile
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
scripts/: reset_sequences.py
(+191 files in other folders)
